<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="xn_inputfunction_select">图片@拍照@评价</string>
    <string name="xn_find_mylocation">寻找我的位置</string>
    <string name="xn_recent_person">最近联系人</string>
    <string name="xn_require_evaluation">感谢您的支持，请评价</string>
    <string name="xn_noevaluat">您还不能对本次会话进行评价，谢谢！</string>
    <string name="xn_ad_appraise_vg">非常满意</string>
    <string name="xn_ad_appraise_good">满意</string>
    <string name="xn_ad_appraise_normal">一般</string>
    <string name="xn_ad_appraise_bad">不满意</string>
    <string name="xn_ad_appraise_vb">非常不满意</string>
    <string name="xn_submit">提交</string>
    <string name="xn_ad_questionstatus">问题解决状态</string>
    <string name="xn_cancel">取消</string>
    <string name="xn_confirm">确定</string>
    <string name="xn_val_going">跟进中</string>
    <string name="xn_val_done">已解决</string>
    <string name="xn_val_no">未解决</string>
    <string name="xn_leave">客服不在线，请留言...</string>
    <string name="xn_input_pe">请输入手机号码或者邮箱</string>
    <string name="xn_adviseandfeedback">建议与反馈</string>
    <string name="xn_showphoto_title">发送中...</string>
    <string name="xn_chatpage_kfname">客户名称</string>
    <string name="xn_histalk_last">上一次会话</string>
    <string name="xn_histalk_next">下一次会话</string>
    <string name="xn_mylocation">我的位置</string>
    <string name="xn_custom_send">发送</string>
    <string name="xn_custom_record">按住说话</string>
    <string name="xn_leave_message">留言</string>
    <string name="xn_toast_nointernet">当前无网络连接</string>
    <string name="xn_toast_netexception">当前网络异常</string>
    <string name="xn_toast_sendfail">发送失败</string>
    <string name="xn_toast_imagetoobig">图片太大，加载失败</string>
    <string name="xn_toast_getservicefail">获取服务器列表失败</string>
    <string name="xn_getservicefail">请求服务失败，请联系服务商</string>
    <string name="xn_toast_errorinput">请不要输入空字符</string>
    <string name="xn_toast_nonet">没有网络连接</string>
    <string name="xn_toast_submit">提交</string>
    <string name="xn_toast_cancel">返回</string>
    <string name="xn_toast_authority">亲还没开启录音权限哦</string>
    <string name="xn_toast_callcsfalse">获取客服失败</string>
    <string name="xn_toast_paramserror">传入参数错误</string>
    <string name="xn_toast_formaterror">传入JSON字符串格式错误</string>
    <string name="xn_text_pulldown">下拉刷新</string>
    <string name="xn_text_refresh">正在刷新...</string>
    <string name="xn_text_recentlyupdate">最近更新:</string>
    <string name="xn_toast_filempty">录音文件不完整或已损坏</string>
    <string name="xn_action_Tchat">由于你长时间未进行会话,已经与客服断开连接</string>
    <string name="xn_tt_leavemsgtip_content">请输入留言内容</string>
    <string name="xn_tt_leavemsgtip_name">请输入姓名</string>
    <string name="xn_tt_leavemsgtip_nikname">请输入昵称</string>
    <string name="xn_tt_leavemsgtip_phoneormail">请输入手机号码或者邮箱</string>
    <string name="xn_tt_leavemsgtip_truephone">请输入正确的手机号码</string>
    <string name="xn_tt_leavemsgtip_trueemail">请输入正确的邮箱</string>
    <string name="xn_tt_leavemsgtip_righttext">不能输入特殊字符</string>
    <string name="xn_tt_leavemsgtip_success">留言成功,我们会尽快联系您</string>
    <string name="xn_tt_leavemsgtip_failed">留言失败,连接服务器失败</string>
    <string name="xn_tt_leavemsg_failed">留言失败</string>
    <string name="xn_tt_userid_is_illegal">userid不合法，请重新传入</string>
    <string name="xn_tt_username_is_illegal">username不合法，请重新传入</string>
    <string name="xn_tt_voicetip_tooshort">时间太短   录音失败</string>
    <string name="xn_tt_voicetip_stopfailed">关闭录音出错</string>
    <string name="xn_valuationtip_hasposted">您的评价已提交,谢谢</string>
    <string name="xn_tt_sdcardtip_nofindsdcard">内存卡不存在</string>
    <string name="xn_tt_cameratip_nofindapplication">没有找到相关应用或拍照权限被禁止</string>
    <string name="xn_tt_cameratip_photoismissing">图片丢失</string>
    <string name="xn_tt_cameratip_iscanceled">拍照已取消</string>
    <string name="xn_tt_openspecifiedactivity_fail">可以在这里提示用户没有找到应用程序，或者是做其他的操作！</string>
    <string name="xn_tt_clearcache_success">成功清空本地缓存...</string>
    <string name="xn_tt_savepicture_success">保存成功</string>
    <string name="xn_notify_newmsg">您有新消息哦！</string>
 	<string name="xn_demoexit">退出</string>
 	<string name="xn_newmsg_num">条新消息</string>
 	<string name="xn_sdk_tryuse">试用</string>
 	<string name="xn_sdk_havevaluation">已评价</string>
 	<string name="xn_sdk_moreinfo">加载更多...</string>
 	<string name="xn_sdk_nomoreinfo">没有更多聊天内容...</string>
 	<string name="xn_sdk_presstalk">按住说话</string>
 	<string name="xn_sdk_loosestop">松开结束</string>
 	<!-- toast -->
 	
 	<string name="xn_checknet">修改失败！请检查网络</string>
 	<string name="xn_checknet2">请求失败！请检查网络</string>
 	<string name="xn_server_exception">修改失败！服务器异常</string>
 	<string name="xn_password_null">密码不能为空！</string>
 	<string name="xn_oldpassword_null">旧密码不能为空！</string>
 	<string name="xn_pwd_inconsistent">两次密码不一致！</string>
 	<string name="xn_nochange">没有修改任何资料！</string>
 	<string name="xn_pleaseinput">请输入内容</string>
 	<string name="xn_submit_succeed">提交成功</string>
 	<string name="xn_submit_fail">提交失败!</string>
 	<string name="xn_input_leaveinfo">请输入留言内容</string>
 	<string name="xn_submit_textsize">你输入的字数不能超过140字！</string>
 	<string name="xn_siteid_not_valid">企业ID无效</string>
 	<string name="xn_siteid_null">企业ID为空</string>
 	<string name="xn_userid_null">用户ID为空</string>
 	<string name="xn_pwd_null">密码为空</string>
 	<string name="xn_clear_cache">嗖的一下就没啦!</string>
 	<string name="xn_switch_succeed">您已成功拒绝转接邀请!</string>
 	<string name="xn_queuing_tips1">抱歉，人数过多您排在第</string>
 	<string name="xn_queuing_tips2">位     点击留言！</string>
 	<string name="xn_inputtext_size">您输入的字数已经超过了400字限制！</string>
 	<string name="xn_cancel_queue">您确定要取消排队吗？</string>
 	<string name="xn_close_chat_session">确定结束对话</string>
 	<string name="xn_contact_provider">获取服务失败，请联系服务商！</string>
 	
</resources>