<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/sdk_chat_top"
            android:fillViewport="true"
            android:orientation="vertical"
            android:overScrollMode="always">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null">

        <RelativeLayout
            android:id="@+id/rl_valu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="16dp"
            android:background="@drawable/ad_bg">

            <TextView
                android:id="@+id/valuation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xn_require_evaluation"
                android:textColor="@color/xn_black"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/sdk_pj_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/valuation_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/re_vgood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sdk_item_vgood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="21dp"
                        android:layout_toRightOf="@+id/item_vgood"
                        android:text="@string/xn_ad_appraise_vg"
                        android:textColor="@color/xn_sdk_head_bg"
                        android:textSize="18sp"
                        tools:ignore="RelativeOverlap"/>

                    <ImageView
                        android:id="@+id/item_vgood"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"

                        android:src="@drawable/sdk_pj_item_select"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/re_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/item_good"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"

                        android:src="@drawable/sdk_pj_item_un"/>

                    <TextView
                        android:id="@+id/sdk_item_good"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="21dp"
                        android:layout_toRightOf="@+id/item_good"
                        android:text="@string/xn_ad_appraise_good"
                        android:textColor="@color/xn_gray"
                        android:textSize="18sp"
                        tools:ignore="RelativeOverlap"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/re_ordinary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/item_ordinary"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/sdk_pj_item_un"/>

                    <TextView
                        android:id="@+id/sdk_item_ordinary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="21dp"
                        android:layout_toRightOf="@+id/item_ordinary"
                        android:text="@string/xn_ad_appraise_normal"
                        android:textColor="@color/xn_gray"
                        android:textSize="18sp"
                        tools:ignore="RelativeOverlap"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/re_displeasure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/item_displeasure"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/sdk_pj_item_un"/>

                    <TextView
                        android:id="@+id/sdk_item_displeasure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="21dp"
                        android:layout_toRightOf="@+id/item_displeasure"
                        android:text="@string/xn_ad_appraise_bad"
                        android:textColor="@color/xn_gray"
                        android:textSize="18sp"
                        tools:ignore="RelativeOverlap"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/re_ungood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/item_ungood"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/sdk_pj_item_un"/>

                    <TextView
                        android:id="@+id/sdk_item_ungood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="21dp"
                        android:layout_toRightOf="@+id/item_ungood"
                        android:text="@string/xn_ad_appraise_vb"
                        android:textColor="@color/xn_gray"
                        android:textSize="18sp"
                        tools:ignore="RelativeOverlap"/>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/ed_rela3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sdk_pj_item"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tv000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/xn_ad_questionstatus"
                    android:textColor="@color/xn_black"
                    android:textSize="20dp"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ed_rela"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_rela3"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/solving"
                    android:layout_width="66dp"
                    android:layout_height="32dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/valuation2"
                    android:gravity="center"
                    android:text="@string/xn_val_going"
                    android:textColor="@color/xn_black"/>

                <TextView
                    android:id="@+id/solved"
                    android:layout_width="66dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="35dp"
                    android:background="@drawable/valuation"
                    android:gravity="center"
                    android:text="@string/xn_val_done"
                    android:textColor="@color/xn_white"/>

                <TextView
                    android:id="@+id/unsolved"
                    android:layout_width="66dp"
                    android:layout_height="32dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/valuation2"
                    android:gravity="center"
                    android:text="@string/xn_val_no"
                    android:textColor="@color/xn_black"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ed_rela2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_rela">

                <RelativeLayout
                    android:id="@+id/ed_rela6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sdk_pj_item"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/tv001"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/xn_adviseandfeedback"
                        android:textColor="@color/xn_black"
                        android:textSize="18sp"/>


                </RelativeLayout>

                <EditText
                    android:id="@+id/sdk_support"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/ed_rela6"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edittext_selector"
                    android:ems="10"
                    android:gravity="top"
                    android:hint=" 建议..."
                    android:maxHeight="80dp"
                    android:padding="3dp">
                </EditText>
            </RelativeLayout>

            <RelativeLayout
            android:id="@+id/sdk_ison"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/ed_rela2"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/sdk_cancel"
                android:layout_width="66dp"
                android:layout_height="50dp"
                android:layout_toLeftOf="@+id/sdk_define"
                android:gravity="center"
                android:text="@string/xn_cancel"
                android:textColor="#414141"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/sdk_define"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/view_val01"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/xn_submit"
                android:textColor="#2398F5"
                android:textSize="18sp"/>
        </RelativeLayout>

            </RelativeLayout>
    </RelativeLayout>

</ScrollView>
